@@ -187,12 +187,30 @@
 
 
     <h1>Grant-Permissions</h1>
-    <div>Grants permission on a file/directory or registry key.</div>
+    <div>Grants permission on a file, directory or registry key.</div>
 
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Grant-Permissions [-Identity] &lt;String&gt; [-Permissions] &lt;String[]&gt; [-Path] &lt;String&gt; [-WhatIf] [-Confirm] [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Granting access to a file system entry or registry key requires a lot of steps.  This method reduces it to one call.  Very helpful.</p>
+
+<p>It has the advantage that it will set permissions on a file system object or a registry.  If <code>Path</code> is absolute, the correct provider (file system or registry) is used.  If <code>Path</code> is relative, the provider of the current location will be used.</p>
+
+<p>The <code>Permissions</code> attribute can be a list of <a href="http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.filesystemrights.aspx">FileSystemRights</a> or <a href="http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.registryrights.aspx">RegistryRights</a>.</p>
+
+<p>This command will show you the values for the <code>FileSystemRights</code>:</p>
+
+<pre><code>[Enum]::GetValues([Security.AccessControl.FileSystemRights])
+</code></pre>
+
+<p>This command will show you the values for the <code>RegistryRights</code>:</p>
+
+<pre><code>[Enum]::GetValues([Security.AccessControl.RegistryRights])
+</code></pre>
+
+    </div>
     
             <h2>Related Commands</h2>
         <ul>
@@ -223,9 +241,7 @@
 			<tr valign='top'>
 				<td>Permissions</td>
 				<td><a href="http://msdn.microsoft.com/en-us/library/system.string.aspx">String[]</a></td>
-				<td>The permission: e.g. FullControl, Read, etc.  For file system items, use values from
-System.Security.AccessControl.FileSystemRights.  For registry items, use values from
-System.Security.AccessControl.RegistryRights.
+				<td>The permission: e.g. FullControl, Read, etc.  For file system items, use values from <a href="http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.filesystemrights.aspx">System.Security.AccessControl.FileSystemRights</a>.  For registry items, use values from <a href="http://msdn.microsoft.com/en-us/library/system.security.accesscontrol.registryrights.aspx">System.Security.AccessControl.RegistryRights</a>.
 </td>
 				<td>true</td>
 				<td>false</td>
@@ -272,6 +288,12 @@ System.Security.AccessControl.RegistryRights.
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Grant-Permissions -Identity ENTERPRISE\Engineers -Permissions FullControl -Path C:\EngineRoom</code></pre>
+            <p><p>Grants the Enterprise's engineering group full control on the engine room.  Very important if you want to get anywhere.</p>
+</p><p></p><p></p><p></p><p></p>             <h2>EXAMPLE 2</h2>
+            <pre><code>Grant-Permissions -Identity ENTERPRISE\Interns -Permissions ReadKey,QueryValues,EnumerateSubKeys -Path rklm:\system\WarpDrive</code></pre>
+            <p><p>Grants the Enterprise's interns access to read about the warp drive.  They need to learn someday, but at least they can't change anything.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
