@@ -33,6 +33,7 @@
   * [Set-TrustedHosts](http://get-carbon.org/help/Set-TrustedHosts.html)
   * [Assert-AdminPrivileges](http://get-carbon.org/help/Assert-AdminPrivileges.html)
   * [Convert-SecureStringToString](http://get-carbon.org/help/Convert-SecureStringToString.html)
+  * [Grant-Permissions](http://get-carbon.org/help/Grant-Permissions.html)
 * Improved whitespace in HTML documentation code samples.
 
 
